--- a/pickups.html
+++ b/pickups.html
@@ -1,170 +1,42 @@
 <table cellpadding=0 cellspacing=0 width=650 border=0>
 <tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>States</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Rich</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Matt McCrane/Dak Prescott</td>
-<td width=50>9/26</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Dustin Hopkins/Matt Bryant</td>
-<td width=50>11/4</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Doug Martin/Frank Gore</td>
-<td width=50>12/23</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Matt McCrane/Aaron Jones</td>
-<td width=50>12/28</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>5)</td>
-<td width=370></td>
-<td width=50></td>
-</tr></table></td>
-</tr>
-<tr>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Roger</b></font></td>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Matthew</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Jesse James/Ricky Seals-Jones</td>
-<td width=50>9/18</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Courtland Sutton/Michael Crabtree</td>
-<td width=50>10/23</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Dan Bailey/Steven Hauschka</td>
-<td width=50>9/20</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Mike Badgley/Ty Montgomery</td>
-<td width=50>11/7</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Ricky Seals-Jones/Jesse James</td>
-<td width=50>9/26</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>3)</td>
-<td width=370>Gus Edwards/Doug Martin</td>
-<td width=50>11/20</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>4)</td>
-<td width=370>Will Dissly/Tre'Quan Smith</td>
-<td width=50>9/26</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>4)</td>
 <td width=370></td>
 <td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
-<td width=15>5)</td>
-<td width=370>Tre'Quan Amith/Keelan Cole</td>
-<td width=50>10/18</td>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
-<td width=15>5)</td>
+<td width=15>2)</td>
 <td width=370></td>
 <td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Steven</b></font></td>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Grant</b></font></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Mason Crosby/Chris Boswell</td>
-<td width=50>10/2</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>1)</td>
-<td width=370>Austin Ekeler/Greg Olsen</td>
-<td width=50>9/11</td>
-</tr></table></td>
-</tr>
-<tr>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Brett Maher/Dez Bryant</td>
-<td width=50>10/16</td>
-</tr></table></td>
-<td><table><tr>
-<td width=15>2)</td>
-<td width=370>Cooper Kupp/James Washington</td>
-<td width=50>9/27</td>
-</tr></table></td>
-</tr>
-<tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Chris Herndon/Dallas Goedert</td>
-<td width=50>11/4</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Kyle Lauletta/Sterling Shepard</td>
-<td width=50>10/7</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -175,8 +47,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Ka'imi Fairbairn/Graham Gano</td>
-<td width=50>12/18</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
@@ -187,55 +59,55 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>Gerald Everett/Kerryon Johnson</td>
-<td width=50>12/23</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
-<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Mike</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>States</b></font></td>
 <td bgcolor='purple'><font size=4 color=#F2F2ED><b>Randy</b></font></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>James White/Allen Hurns</td>
-<td width=50>9/20</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Greg Olsen/-</td>
-<td width=50>10/5</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Cameron Brate/Bilal Powell</td>
-<td width=50>10/14</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Marquez Valdes-Scantling/Kenny Stills</td>
-<td width=50>11/6</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Will Fuller/Pierre Garcon</td>
-<td width=50>10/14</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Jeff Wilson/Brandon McManus</td>
-<td width=50>12/4</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Traded to Grant</td>
-<td width=50>9/27</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
@@ -246,8 +118,72 @@
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>Traded to Roger</td>
-<td width=50>11/6</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Grant</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Steven</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
@@ -262,61 +198,125 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Dante Pettis/Devontae Booker</td>
-<td width=50>9/14</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370>Ryan Fitzpatrick/Courtland Sutton</td>
-<td width=50>9/23</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Greg Joseph/Vernon Davis</td>
-<td width=50>9/18</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370>Wendell Smallwood/Ryan Fitzpatrick</td>
-<td width=50>10/9</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>Ito Smith/Alfred Morris</td>
-<td width=50>10/16</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370>John Brown/Randall Cobb</td>
-<td width=50>10/18</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>CJ Beathard/Kalen Ballage</td>
-<td width=50>10/18</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370>Josh Adams/-</td>
-<td width=50>11/8</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>Ryan Fitzpatrick/Dante Pettis</td>
-<td width=50>11/3</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>5)</td>
-<td width=370>Spencer Ware/Wendell Smallwood</td>
-<td width=50>11/30</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Rich</b></font></td>
+<td bgcolor='purple'><font size=4 color=#F2F2ED><b>Mike</b></font></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>1)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>2)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>3)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>4)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+</tr>
+<tr>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
+</tr></table></td>
+<td><table><tr>
+<td width=15>5)</td>
+<td width=370></td>
+<td width=50></td>
 </tr></table></td>
 </tr>
 </table>
@@ -327,77 +327,6 @@
 <tr><td width=50>9/1</td>
 <td width=600>
 Free Pickups:<br>
-Team 9  - Alfred Morris/Greg Joseph (9/1)<br>
-Team 4  - Phillip Lindsay/Matt McCrane (9/4)<br>
-Team 1  - James Conner/Bo Scarbrough (9/4)<br>
-Team 4  - Jared Cook/David Marvin (9/11)<br>
-Team 10 - Randall Cobb/Kaare Vedvik (9/11)<br>
-Team 6  - TJ Yeldon/KhaDarel Hodge (9/11)<br>
-Team 8  - Kenny Stills/Jerick McKinnon (9/12)<br>
-Team 8  - Brandon McManus/Eddy Piniero (9/18)<br>
-Team 9  - Javorius Allen/Rex Burkhead (9/30)<br>
-Team 3  - Vance McDonald/Will Dissly (10/2)<br>
-Team 5  - Eric Ebron/Delanie Walker (10/2)<br>
-Team 9  - Mike Williams/Jimmy Garoppolo (10/4)<br>
-Team 5  - Mike Davis/Jay Ajayi (10/10)<br>
-Team 4  - Tyler Boyd/Devonta Freeman (10/21)<br>
-Team 1  - Mitchell Trubisky/Matt McCrane (10/22)<br>
-Team 7  - Adam Humphries/Will Fuller (11/21)<br>
-Team 9  - Jesse James/Jack Doyle (11/29)<br>
-Team 6  - Justin Jackson/Cooper Kupp (12/5)<br>
-Team 7  - Dede Westbrook/Alex Collins (12/14)<br>
-Team 7  - Robert Foster/Marvin Jones (12/14)<br>
-Team 8  - Damien Williams/Greg Olsen (12/18)<br>
-Team 10 - Elijah McGuire/Isaiah Crowell (12/23)
-</td></tr>
-<tr><td width=50>8/28</td>
-<td width=600>
-Team 6  - Alvin Kamara<br>
-Team 10 - Sam Darnold
-</td></tr>
-<tr><td width=50>9/23</td>
-<td width=600>
-Team 1  - Michael Gallup<br>
-Team 8  - Latavius Murray
-</td></tr>
-<tr><td width=50>9/27</td>
-<td width=600>
-Team 6  - Kyle Rudolph, pickup (Graham Gano/Jordan Wilkins 11/3)<br>
-Team 7  - TJ Yeldon
-</td></tr>
-<tr><td width=50>10/5</td>
-<td width=600>
-Team 7  - George Kittle, Dalvin Cook, Latavius Murray (cut Chris Ivory)<br>
-Team 8  - Leonard Fournette, TJ Yeldon
-</td></tr>
-<tr><td width=50>10/26</td>
-<td width=600>
-Team 7  - Baker Mayfield, John Brown (cut Mike Gesicki)<br>
-Team 10 - Davante Adams
-</td></tr>
-<tr><td width=50>10/26</td>
-<td width=600>
-Team 5  - Philip Rivers<br>
-Team 10 - Russell Wilson
-</td></tr>
-<tr><td width=50>11/6</td>
-<td width=600>
-Team 3  - James White, Amari Cooper, OJ Howard, pickup (Dak Prescott/- 11/21)<br>
-Team 7  - Drew Brees, Marvin Jones, Dan Bailey, Jamaal Williams (cut Jordy Nelson)
-</td></tr>
-<tr><td width=50>11/18</td>
-<td width=600>
-Team 3  - Julian Edelman, Kyle Rudolph<br>
-Team 6  - Kenny Golladay, Ricky Seals-Jones
-</td></tr>
-<tr><td width=50>11/20</td>
-<td width=600>
-Team 1  - Mike Badgley<br>
-Team 4  - Mitchell Trubisky
-</td></tr>
-<tr><td width=50>11/23</td>
-<td width=600>
-Team 5  - Peyton Barber<br>
-Team 6  - Lamar Jackson
+Team 1  - Jimmy Garoppolo/Tristan Vizcaino (9/3)
 </td></tr>
 </table>
