--- a/roster.html
+++ b/roster.html
@@ -8,6 +8,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Roger (1)</b></font></td></tr>
 <tr><td> KC</td><td>Patrick Mahomes        </td></tr>
+<tr><td> SF</td><td>Jimmy Garoppolo        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
@@ -20,7 +21,7 @@
 <tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td> NE</td><td>Josh Gordon            </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>ARL</td><td>Austin Hooper          </td></tr>
+<tr><td>ATL</td><td>Austin Hooper          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>BUF</td><td>Steven Hauschka        </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -29,7 +30,6 @@
 <tr><td>BAL</td><td>Miles Boykin           </td></tr>
 <tr><td> NE</td><td>Jakobi Meyers          </td></tr>
 <tr><td>OAK</td><td>Hunter Renfrow         </td></tr>
-<tr><td>CIN</td><td>Tristan Vizcaino       </td></tr>
 </table>
 </td>
 <td valign=top>
