--- a/week1.html
+++ b/week1.html
@@ -40,10 +40,10 @@
 <tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hilton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Golladay</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Haskins</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -52,7 +52,7 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Sam (8)</b></font></td></tr>
 <tr><td>Winston</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Bell</td>          <td></td><td align=right>0</td></tr>
-<tr><td>DFreeman</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
@@ -127,9 +127,9 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
 <tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>MGordon</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Coleman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
-<tr><td>ABrown</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Njoku</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
