--- a/week1.html
+++ b/week1.html
@@ -55,7 +55,7 @@
 <tr><td>Ingram</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Adams</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Lockett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Engram</td>        <td></td><td align=right>0</td></tr>
+<tr><td>McDonald</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Gostkowski</td>    <td></td><td align=right>0</td></tr>
 <tr><td>Seibert</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
