--- a/thousand.html
+++ b/thousand.html
@@ -417,6 +417,12 @@
     <td>1105</td>
     <td>Mike</td>
     <td>665</td></tr>
+<tr><td>2019</td>
+    <td>Week 1</td>
+    <td>States Edwards</td>
+    <td>1105</td>
+    <td>Rich</td>
+    <td>410</td></tr>
 <tr><td>2001</td>
     <td>Week 9</td>
     <td>Randy Edwards</td>
