--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <tr>
 <td bgcolor=#F2F2ED>
 <b>Week</b>
-<a href="week1.html"><b>1P</b></a><br>
+<a href="week1.html"><b>1</b></a>
+<a href="week2.html"><b>2P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -58,45 +59,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>States(1)</font></td>
-    <td><font size=2>13</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>12770</font></td>
-    <td><font size=2>8415</font></td>
-    <td><font size=2>960</font></td>
-    <td><font size=2>460</font></td>
-    <td><font size=2>3</font></td></tr>
-<tr><td><font size=2>Roger(3)</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>12175</font></td>
-    <td><font size=2>10110</font></td>
-    <td><font size=2>1020</font></td>
-    <td><font size=2>460</font></td>
+<tr><td><font size=2>States(3)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1105</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>1105</font></td>
+    <td><font size=2>1105</font></td>
     <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Steven(5)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>11120</font></td>
-    <td><font size=2>10210</font></td>
-    <td><font size=2>995</font></td>
-    <td><font size=2>310</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>Mike(7)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>10540</font></td>
-    <td><font size=2>11105</font></td>
-    <td><font size=2>955</font></td>
-    <td><font size=2>380</font></td>
-    <td><font size=2>1</font></td></tr>
-<tr><td><font size=2>John(9)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>9115</font></td>
-    <td><font size=2>8165</font></td>
-    <td><font size=2>1020</font></td>
-    <td><font size=2>290</font></td>
+<tr><td><font size=2>Roger(1)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>840</font></td>
+    <td><font size=2>470</font></td>
+    <td><font size=2>840</font></td>
+    <td><font size=2>840</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>John(7)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>470</font></td>
+    <td><font size=2>840</font></td>
+    <td><font size=2>470</font></td>
+    <td><font size=2>470</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Rich(9)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>1105</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>410</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Grant(5)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>295</font></td>
+    <td><font size=2>515</font></td>
+    <td><font size=2>295</font></td>
+    <td><font size=2>295</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -106,45 +107,45 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Sam(10)</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>11960</font></td>
-    <td><font size=2>9995</font></td>
-    <td><font size=2>985</font></td>
-    <td><font size=2>445</font></td>
-    <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Randy(8)</font></td>
-    <td><font size=2>7</font></td>
-    <td><font size=2>8</font></td>
-    <td><font size=2>11560</font></td>
-    <td><font size=2>10510</font></td>
-    <td><font size=2>1235</font></td>
-    <td><font size=2>220</font></td>
-    <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Matthew(4)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>11340</font></td>
-    <td><font size=2>9795</font></td>
-    <td><font size=2>1270</font></td>
-    <td><font size=2>340</font></td>
-    <td><font size=2>5</font></td></tr>
-<tr><td><font size=2>Grant(6)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>11345</font></td>
-    <td><font size=2>11045</font></td>
-    <td><font size=2>1345</font></td>
-    <td><font size=2>420</font></td>
-    <td><font size=2>2</font></td></tr>
-<tr><td><font size=2>Rich(2)</font></td>
-    <td><font size=2>6</font></td>
-    <td><font size=2>9</font></td>
-    <td><font size=2>9095</font></td>
-    <td><font size=2>10130</font></td>
+<tr><td><font size=2>Mike(10)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>990</font></td>
+    <td><font size=2>960</font></td>
+    <td><font size=2>990</font></td>
+    <td><font size=2>990</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Matthew(2)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
     <td><font size=2>800</font></td>
-    <td><font size=2>240</font></td>
+    <td><font size=2>580</font></td>
+    <td><font size=2>800</font></td>
+    <td><font size=2>800</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Steven(6)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>515</font></td>
+    <td><font size=2>295</font></td>
+    <td><font size=2>515</font></td>
+    <td><font size=2>515</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Randy(4)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>960</font></td>
+    <td><font size=2>990</font></td>
+    <td><font size=2>960</font></td>
+    <td><font size=2>960</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Sam(8)</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>580</font></td>
+    <td><font size=2>800</font></td>
+    <td><font size=2>580</font></td>
+    <td><font size=2>580</font></td>
     <td><font size=2>0</font></td></tr>
 </table>
 </table>
