--- a/strength.html
+++ b/strength.html
@@ -4,104 +4,104 @@
 </table>
 <table border=2>
 <tr><td><b>Position</b></td>
-    <td width=42><b>States</b></td>
-    <td width=42><b>Rich</b></td>
     <td width=42><b>Roger</b></td>
     <td width=42><b>Matthew</b></td>
-    <td width=42><b>Steven</b></td>
-    <td width=42><b>Grant</b></td>
-    <td width=42><b>Mike</b></td>
+    <td width=42><b>States</b></td>
     <td width=42><b>Randy</b></td>
+    <td width=42><b>Grant</b></td>
+    <td width=42><b>Steven</b></td>
     <td width=42><b>John</b></td>
-    <td width=42><b>Sam</b></td></tr>
+    <td width=42><b>Sam</b></td>
+    <td width=42><b>Rich</b></td>
+    <td width=42><b>Mike</b></td></tr>
 <tr><td align='right'>QB</td>
-    <td align='right'>3165</td>
-    <td align='right'>2435</td>
-    <td align='right'>3905</td>
-    <td align='right'>2360</td>
-    <td align='right'>2190</td>
-    <td align='right'>2765</td>
-    <td align='right'>2675</td>
-    <td align='right'>2515</td>
-    <td align='right'>2600</td>
-    <td align='right'>2970</td></tr>
+    <td align='right'>335</td>
+    <td align='right'>275</td>
+    <td align='right'>380</td>
+    <td align='right'>30</td>
+    <td align='right'>25</td>
+    <td align='right'>75</td>
+    <td align='right'>150</td>
+    <td align='right'>50</td>
+    <td align='right'>325</td>
+    <td align='right'>340</td></tr>
 <tr><td align='right'>Best RB</td>
-    <td align='right'>2380</td>
-    <td align='right'>1025</td>
-    <td align='right'>1560</td>
-    <td align='right'>1750</td>
-    <td align='right'>785</td>
-    <td align='right'>1915</td>
-    <td align='right'>910</td>
-    <td align='right'>675</td>
-    <td align='right'>1530</td>
-    <td align='right'>1180</td></tr>
+    <td align='right'>80</td>
+    <td align='right'>60</td>
+    <td align='right'>345</td>
+    <td align='right'>255</td>
+    <td align='right'>125</td>
+    <td align='right'>125</td>
+    <td align='right'>25</td>
+    <td align='right'>150</td>
+    <td align='right'>35</td>
+    <td align='right'>250</td></tr>
 <tr><td align='right'>Other RB's</td>
-    <td align='right'>2210</td>
-    <td align='right'>1295</td>
-    <td align='right'>1185</td>
-    <td align='right'>845</td>
-    <td align='right'>1155</td>
-    <td align='right'>1760</td>
-    <td align='right'>1450</td>
-    <td align='right'>1250</td>
-    <td align='right'>340</td>
-    <td align='right'>905</td></tr>
+    <td align='right'>0</td>
+    <td align='right'>45</td>
+    <td align='right'>0</td>
+    <td align='right'>250</td>
+    <td align='right'>0</td>
+    <td align='right'>30</td>
+    <td align='right'>0</td>
+    <td align='right'>110</td>
+    <td align='right'>0</td>
+    <td align='right'>165</td></tr>
 <tr><td align='right'>Best WR</td>
-    <td align='right'>1030</td>
-    <td align='right'>1495</td>
-    <td align='right'>1255</td>
-    <td align='right'>820</td>
-    <td align='right'>1405</td>
-    <td align='right'>805</td>
-    <td align='right'>590</td>
-    <td align='right'>1990</td>
-    <td align='right'>1640</td>
-    <td align='right'>1120</td></tr>
+    <td align='right'>135</td>
+    <td align='right'>75</td>
+    <td align='right'>130</td>
+    <td align='right'>160</td>
+    <td align='right'>40</td>
+    <td align='right'>180</td>
+    <td align='right'>100</td>
+    <td align='right'>125</td>
+    <td align='right'>0</td>
+    <td align='right'>150</td></tr>
 <tr><td align='right'>Other WR's</td>
-    <td align='right'>1105</td>
-    <td align='right'>730</td>
-    <td align='right'>1705</td>
-    <td align='right'>940</td>
-    <td align='right'>1515</td>
-    <td align='right'>1565</td>
-    <td align='right'>1010</td>
-    <td align='right'>2020</td>
-    <td align='right'>670</td>
-    <td align='right'>1775</td></tr>
+    <td align='right'>35</td>
+    <td align='right'>60</td>
+    <td align='right'>0</td>
+    <td align='right'>35</td>
+    <td align='right'>35</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>50</td></tr>
 <tr><td align='right'>TE</td>
-    <td align='right'>515</td>
-    <td align='right'>290</td>
-    <td align='right'>140</td>
-    <td align='right'>820</td>
-    <td align='right'>1225</td>
-    <td align='right'>190</td>
-    <td align='right'>925</td>
-    <td align='right'>1125</td>
-    <td align='right'>190</td>
-    <td align='right'>1325</td></tr>
+    <td align='right'>35</td>
+    <td align='right'>30</td>
+    <td align='right'>25</td>
+    <td align='right'>40</td>
+    <td align='right'>50</td>
+    <td align='right'>0</td>
+    <td align='right'>25</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td></tr>
 <tr><td align='right'>K</td>
-    <td align='right'>1190</td>
-    <td align='right'>1210</td>
-    <td align='right'>1355</td>
-    <td align='right'>1470</td>
-    <td align='right'>1075</td>
-    <td align='right'>845</td>
-    <td align='right'>1125</td>
-    <td align='right'>1350</td>
-    <td align='right'>1230</td>
-    <td align='right'>1125</td></tr>
+    <td align='right'>55</td>
+    <td align='right'>135</td>
+    <td align='right'>70</td>
+    <td align='right'>150</td>
+    <td align='right'>20</td>
+    <td align='right'>105</td>
+    <td align='right'>30</td>
+    <td align='right'>140</td>
+    <td align='right'>15</td>
+    <td align='right'>35</td></tr>
 <tr><td align='right'>R</td>
-    <td align='right'>1175</td>
-    <td align='right'>615</td>
-    <td align='right'>1070</td>
-    <td align='right'>2335</td>
-    <td align='right'>1770</td>
-    <td align='right'>1500</td>
-    <td align='right'>1855</td>
-    <td align='right'>635</td>
-    <td align='right'>915</td>
-    <td align='right'>1560</td></tr>
+    <td align='right'>165</td>
+    <td align='right'>120</td>
+    <td align='right'>155</td>
+    <td align='right'>40</td>
+    <td align='right'>0</td>
+    <td align='right'>0</td>
+    <td align='right'>140</td>
+    <td align='right'>5</td>
+    <td align='right'>35</td>
+    <td align='right'>0</td></tr>
 <tr><td align='right'></td>
     <td align='right'></td>
     <td align='right'></td>
@@ -114,14 +114,14 @@
     <td align='right'></td>
     <td align='right'></td></tr>
 <tr><td align='right'>Total</td>
-    <td align='right'>12770</td>
-    <td align='right'>9095</td>
-    <td align='right'>12175</td>
-    <td align='right'>11340</td>
-    <td align='right'>11120</td>
-    <td align='right'>11345</td>
-    <td align='right'>10540</td>
-    <td align='right'>11560</td>
-    <td align='right'>9115</td>
-    <td align='right'>11960</td></tr>
+    <td align='right'>840</td>
+    <td align='right'>800</td>
+    <td align='right'>1105</td>
+    <td align='right'>960</td>
+    <td align='right'>295</td>
+    <td align='right'>515</td>
+    <td align='right'>470</td>
+    <td align='right'>580</td>
+    <td align='right'>410</td>
+    <td align='right'>990</td></tr>
 </table>
