--- a/pickups.html
+++ b/pickups.html
@@ -134,8 +134,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Gardner Minshew/Eric Ebron</td>
+<td width=50>9/10</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -327,6 +327,7 @@
 <tr><td width=50>9/1</td>
 <td width=600>
 Free Pickups:<br>
-Team 1  - Jimmy Garoppolo/Tristan Vizcaino (9/3)
+Team 1  - Jimmy Garoppolo/Tristan Vizcaino (9/3)<br>
+Team 6  - DeSean Jackson/N'Keal Harry (9/10)
 </td></tr>
 </table>
