--- a/roster.html
+++ b/roster.html
@@ -137,13 +137,13 @@
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
-<tr><td>IND</td><td>Eric Ebron             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
 <tr><td>IND</td><td>Parris Campbell        </td></tr>
+<tr><td>JAX</td><td>Gardner Minshew        </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -161,6 +161,7 @@
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>CHI</td><td>Allen Robinson         </td></tr>
 <tr><td>CAR</td><td>Curtis Samuel          </td></tr>
+<tr><td>PHI</td><td>DeSean Jackson         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>OJ Howard              </td></tr>
 <tr><td>TEN</td><td>Delanie Walker         </td></tr>
@@ -169,7 +170,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Darrell Henderson      </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
-<tr><td> NE</td><td>N'Keal Harry           </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
 <tr><td>PIT</td><td>Matthew Wright         </td></tr>
 </table>
