--- a/week2.html
+++ b/week2.html
@@ -84,10 +84,10 @@
 <tr><td>Fournette</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Carson</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hill</td>          <td></td><td align=right>0</td></tr>
-<tr><td>Howard</td>        <td></td><td align=right>0</td></tr>
+<tr><td>ARobinson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Henderson</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
