--- a/week2.html
+++ b/week2.html
@@ -144,7 +144,7 @@
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Olsen</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Reed</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
