--- a/roster.html
+++ b/roster.html
@@ -42,6 +42,7 @@
 <tr><td>LAR</td><td>Todd Gurley            </td></tr>
 <tr><td> NE</td><td>Sony Michel            </td></tr>
 <tr><td>DEN</td><td>Royce Freeman          </td></tr>
+<tr><td>LAR</td><td>Malcolm Brown          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> NO</td><td>Michael Thomas         </td></tr>
 <tr><td>IND</td><td>TY Hilton              </td></tr>
@@ -49,7 +50,6 @@
 <tr><td>DEN</td><td>Courtland Sutton       </td></tr>
 <tr><td> GB</td><td>Marquez ValdesScantling</td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>LAC</td><td>Hunter Henry           </td></tr>
 <tr><td> GB</td><td>Jimmy Graham           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Harrison Butker        </td></tr>
