--- a/pickups.html
+++ b/pickups.html
@@ -11,8 +11,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Malcolm Brown/Hunter Henry</td>
+<td width=50>9/12</td>
 </tr></table></td>
 </tr>
 <tr>
