--- a/pickups.html
+++ b/pickups.html
@@ -328,6 +328,7 @@
 <td width=600>
 Free Pickups:<br>
 Team 1  - Jimmy Garoppolo/Tristan Vizcaino (9/3)<br>
-Team 6  - DeSean Jackson/N'Keal Harry (9/10)
+Team 6  - DeSean Jackson/N'Keal Harry (9/10)<br>
+Team 10 - Tommy Sweeney/Jerick McKinnon (9/14)
 </td></tr>
 </table>
