--- a/roster.html
+++ b/roster.html
@@ -273,7 +273,6 @@
 <tr><td>CLE</td><td>Kareem Hunt            </td></tr>
 <tr><td>BUF</td><td>LeSean McCoy           </td></tr>
 <tr><td> TB</td><td>Peyton Barber          </td></tr>
-<tr><td> SF</td><td>Jerick McKinnon        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Julio Jones            </td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
@@ -288,6 +287,7 @@
 <tr><td>PHI</td><td>Miles Sanders          </td></tr>
 <tr><td>CIN</td><td>Damion Willis          </td></tr>
 <tr><td>DEN</td><td>Drew Lock              </td></tr>
+<tr><td>BUF</td><td>Tommy Sweeney          </td></tr>
 </table>
 </td>
 <td>
