--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 <td bgcolor=#F2F2ED>
 <b>Week</b>
 <a href="week1.html"><b>1</b></a>
-<a href="week2.html"><b>2P</b></a><br>
+<a href="week2.html"><b>2</b></a>
+<a href="week3.html"><b>3P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -60,43 +61,43 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
 <tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>2015</font></td>
+    <td><font size=2>1095</font></td>
     <td><font size=2>1105</font></td>
-    <td><font size=2>410</font></td>
-    <td><font size=2>1105</font></td>
-    <td><font size=2>1105</font></td>
-    <td><font size=2>1</font></td></tr>
+    <td><font size=2>910</font></td>
+    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Roger(1)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1525</font></td>
+    <td><font size=2>1380</font></td>
     <td><font size=2>840</font></td>
-    <td><font size=2>470</font></td>
-    <td><font size=2>840</font></td>
-    <td><font size=2>840</font></td>
+    <td><font size=2>685</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Rich(9)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1300</font></td>
+    <td><font size=2>1525</font></td>
+    <td><font size=2>890</font></td>
+    <td><font size=2>410</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>John(7)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>890</font></td>
+    <td><font size=2>1730</font></td>
     <td><font size=2>470</font></td>
-    <td><font size=2>840</font></td>
-    <td><font size=2>470</font></td>
-    <td><font size=2>470</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Rich(9)</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>410</font></td>
-    <td><font size=2>1105</font></td>
-    <td><font size=2>410</font></td>
-    <td><font size=2>410</font></td>
+    <td><font size=2>420</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>295</font></td>
-    <td><font size=2>515</font></td>
-    <td><font size=2>295</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>765</font></td>
+    <td><font size=2>1300</font></td>
+    <td><font size=2>470</font></td>
     <td><font size=2>295</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
@@ -107,45 +108,45 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Mike(10)</font></td>
-    <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>990</font></td>
-    <td><font size=2>960</font></td>
-    <td><font size=2>990</font></td>
-    <td><font size=2>990</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Matthew(2)</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
     <td><font size=2>0</font></td>
+    <td><font size=2>1585</font></td>
+    <td><font size=2>1050</font></td>
     <td><font size=2>800</font></td>
-    <td><font size=2>580</font></td>
-    <td><font size=2>800</font></td>
-    <td><font size=2>800</font></td>
+    <td><font size=2>785</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Mike(10)</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>0</font></td>
+    <td><font size=2>1420</font></td>
+    <td><font size=2>1365</font></td>
+    <td><font size=2>990</font></td>
+    <td><font size=2>430</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Randy(4)</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1</font></td>
+    <td><font size=2>1705</font></td>
+    <td><font size=2>1360</font></td>
+    <td><font size=2>960</font></td>
+    <td><font size=2>745</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Steven(6)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>0</font></td>
-    <td><font size=2>515</font></td>
-    <td><font size=2>295</font></td>
-    <td><font size=2>515</font></td>
-    <td><font size=2>515</font></td>
-    <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Randy(4)</font></td>
-    <td><font size=2>0</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>960</font></td>
-    <td><font size=2>990</font></td>
-    <td><font size=2>960</font></td>
-    <td><font size=2>960</font></td>
+    <td><font size=2>885</font></td>
+    <td><font size=2>1040</font></td>
+    <td><font size=2>515</font></td>
+    <td><font size=2>370</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Sam(8)</font></td>
     <td><font size=2>0</font></td>
-    <td><font size=2>1</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>985</font></td>
+    <td><font size=2>1230</font></td>
     <td><font size=2>580</font></td>
-    <td><font size=2>800</font></td>
-    <td><font size=2>580</font></td>
-    <td><font size=2>580</font></td>
+    <td><font size=2>405</font></td>
     <td><font size=2>0</font></td></tr>
 </table>
 </table>
