--- a/roster.html
+++ b/roster.html
@@ -132,7 +132,7 @@
 <tr><td>DET</td><td>CJ Anderson            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
-<tr><td>OAK</td><td>Antonio Brown          </td></tr>
+<tr><td> NE</td><td>Antonio Brown          </td></tr>
 <tr><td> NE</td><td>Julian Edelman         </td></tr>
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
 <tr><td height=9></td><td></td></tr>
