--- a/freeagt.html
+++ b/freeagt.html
@@ -1,90 +1,102 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2019 Free Agent Leaderboard<br>(Through week 1)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2019 Free Agent Leaderboard<br>(Through week 2)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Case Keenum            </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Matthew Stafford       </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 235</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Derek Carr             </td><td><font size=3>  85</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Nick Foles             </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Taysom Hill            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Eli Manning            </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Joe Flacco             </td><td><font size=3>  65</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Robert Griffin         </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Matthew Stafford       </td><td><font size=3> 480</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Andy Dalton            </td><td><font size=3> 425</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Case Keenum            </td><td><font size=3> 400</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 165</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Eli Manning            </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Derek Carr             </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Nick Foles             </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Taysom Hill            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Mason Rudolph          </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Ryan Fitzpatrick       </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Robert Griffin         </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
-<tr><td><font size=3>Malcolm Brown          </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Raheem Mostert         </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Jeff Wilson            </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Carlos Hyde            </td><td><font size=3>  85</td></tr>
+<tr><td><font size=3>Frank Gore             </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>Jamaal Williams        </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>Alex Armah             </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Wayne Gallman          </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Dontrell Hilliard      </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Patrick Ricard         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Carlos Hyde            </td><td><font size=3>  40</td></tr>
+<tr><td><font size=3>Jordan Wilkins         </td><td><font size=3>  40</td></tr>
 <tr><td><font size=3>Ronald Jones           </td><td><font size=3>  35</td></tr>
 <tr><td><font size=3>Chris Thompson         </td><td><font size=3>  30</td></tr>
 <tr><td><font size=3>Gus Edwards            </td><td><font size=3>  25</td></tr>
 <tr><td><font size=3>Darren Sproles         </td><td><font size=3>  10</td></tr>
+<tr><td><font size=3>Jerick McKinnon        </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
-<tr><td><font size=3>DeSean Jackson         </td><td><font size=3> 325</td></tr>
-<tr><td><font size=3>John Ross              </td><td><font size=3> 300</td></tr>
+<tr><td><font size=3>John Ross              </td><td><font size=3> 360</td></tr>
+<tr><td><font size=3>Demarcus Robinson      </td><td><font size=3> 310</td></tr>
 <tr><td><font size=3>Phillip Dorsett        </td><td><font size=3> 270</td></tr>
+<tr><td><font size=3>DJ Chark               </td><td><font size=3> 245</td></tr>
+<tr><td><font size=3>Emmanuel Sanders       </td><td><font size=3> 215</td></tr>
+<tr><td><font size=3>Chris Conley           </td><td><font size=3> 180</td></tr>
 <tr><td><font size=3>Danny Amendola         </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>DJ Chark               </td><td><font size=3> 170</td></tr>
-<tr><td><font size=3>Chris Conley           </td><td><font size=3> 145</td></tr>
+<tr><td><font size=3>Tyrell Williams        </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Devin Smith            </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Marquise Goodwin       </td><td><font size=3> 135</td></tr>
 <tr><td><font size=3>Randall Cobb           </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>Tyrell Williams        </td><td><font size=3> 125</td></tr>
+<tr><td><font size=3>Nelson Agholor         </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Richie James           </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Willie Snead           </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Kenny Stills           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Emmanuel Sanders       </td><td><font size=3>  90</td></tr>
-<tr><td><font size=3>Tre'Quan Smith         </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Ted Ginn               </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Trey Quinn             </td><td><font size=3>  50</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Vernon Davis           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Blake Jarwin           </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Tyler Higbee           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Jason Witten           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>CJ Uzomah              </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Darren Waller          </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Will Dissly            </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Vernon Davis           </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Blake Jarwin           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Jason Witten           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Darren Waller          </td><td><font size=3>  60</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Eric Ebron             </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Tyler Eifert           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Tyler Higbee           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Hayden Hurst           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Hunter Henry           </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>CJ Uzomah              </td><td><font size=3>  30</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 120</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 115</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>Brandon McManus        </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>Zane Gonzalez          </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>Brandon McManus        </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>Josh Lambo             </td><td><font size=3> 135</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 120</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Ty Long                </td><td><font size=3>  95</td></tr>
+<tr><td><font size=3>Matt Bryant            </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Brett Maher            </td><td><font size=3>  65</td></tr>
 <tr><td><font size=3>Jason Sanders          </td><td><font size=3>  65</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3>  60</td></tr>
-<tr><td><font size=3>Josh Lambo             </td><td><font size=3>  60</td></tr>
-<tr><td><font size=3>Ty Long                </td><td><font size=3>  60</td></tr>
-<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Brett Maher            </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>Dan Bailey             </td><td><font size=3>  20</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3>  20</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3>  60</td></tr>
+<tr><td><font size=3>Dan Bailey             </td><td><font size=3>  55</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
-<tr><td><font size=3>Gardner Minshew        </td><td><font size=3> 165</td></tr>
-<tr><td><font size=3>Preston Williams       </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Preston Williams       </td><td><font size=3> 105</td></tr>
+<tr><td><font size=3>KeeSean Johnson        </td><td><font size=3>   5</td></tr>
+<tr><td><font size=3>N'Keal Harry           </td><td><font size=3>   0</td></tr>
 <tr><td><font size=3>Tristan Vizcaino       </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
