--- a/pickups.html
+++ b/pickups.html
@@ -6,8 +6,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Emmanuel Sanders/Dion Lewis</td>
+<td width=50>9/17</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -75,8 +75,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Matthew Stafford/Corey Davis</td>
+<td width=50>9/17</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -329,6 +329,10 @@
 Free Pickups:<br>
 Team 1  - Jimmy Garoppolo/Tristan Vizcaino (9/3)<br>
 Team 6  - DeSean Jackson/N'Keal Harry (9/10)<br>
-Team 10 - Tommy Sweeney/Jerick McKinnon (9/14)
+Team 10 - Tommy Sweeney/Jerick McKinnon (9/14)<br>
+Team 5  - Carlos Hyde/CJ Anderson (9/17)<br>
+Team 6  - Demarcus Robinson/Matthew Wright (9/17)<br>
+Team 1  - Raheem Mostert/Derrius Guice (9/17)<br>
+Team 5  - Darren Waller/Ben Roethlisberger (9/17)
 </td></tr>
 </table>
