--- a/roster.html
+++ b/roster.html
@@ -13,13 +13,13 @@
 <tr><td> NO</td><td>Alvin Kamara           </td></tr>
 <tr><td> GB</td><td>Aaron Jones            </td></tr>
 <tr><td>IND</td><td>Marlon Mack            </td></tr>
-<tr><td>WAS</td><td>Derrius Guice          </td></tr>
-<tr><td>TEN</td><td>Dion Lewis             </td></tr>
+<tr><td> SF</td><td>Raheem Mostert         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Odell Beckham          </td></tr>
 <tr><td>CAR</td><td>DJ Moore               </td></tr>
 <tr><td>CIN</td><td>Tyler Boyd             </td></tr>
 <tr><td> NE</td><td>Josh Gordon            </td></tr>
+<tr><td>DEN</td><td>Emmanuel Sanders       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Austin Hooper          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -96,6 +96,7 @@
 <tr><td>CAR</td><td>Cam Newton             </td></tr>
 <tr><td>CHI</td><td>Mitch Trubisky         </td></tr>
 <tr><td>MIN</td><td>Kirk Cousins           </td></tr>
+<tr><td>DET</td><td>Matthew Stafford       </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Christian McCaffrey    </td></tr>
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
@@ -107,7 +108,6 @@
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
 <tr><td>LAR</td><td>Cooper Kupp            </td></tr>
 <tr><td>HOU</td><td>Will Fuller            </td></tr>
-<tr><td>TEN</td><td>Corey Davis            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> KC</td><td>Travis Kelce           </td></tr>
 <tr><td>BAL</td><td>Mark Andrews           </td></tr>
@@ -122,14 +122,13 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (5)</b></font></td></tr>
 <tr><td>LAR</td><td>Jared Goff             </td></tr>
-<tr><td>PIT</td><td>Ben Roethlisberger     </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
 <tr><td>LAC</td><td>Melvin Gordon          </td></tr>
 <tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td> NO</td><td>Latavius Murray        </td></tr>
 <tr><td>WAS</td><td>Adrian Peterson        </td></tr>
-<tr><td>DET</td><td>CJ Anderson            </td></tr>
+<tr><td> KC</td><td>Carlos Hyde            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
 <tr><td> NE</td><td>Antonio Brown          </td></tr>
@@ -137,6 +136,7 @@
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>David Njoku            </td></tr>
+<tr><td>OAK</td><td>Darren Waller          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -162,6 +162,7 @@
 <tr><td>CHI</td><td>Allen Robinson         </td></tr>
 <tr><td>CAR</td><td>Curtis Samuel          </td></tr>
 <tr><td>PHI</td><td>DeSean Jackson         </td></tr>
+<tr><td> KC</td><td>Demarcus Robinson      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>OJ Howard              </td></tr>
 <tr><td>TEN</td><td>Delanie Walker         </td></tr>
@@ -171,7 +172,6 @@
 <tr><td>LAR</td><td>Darrell Henderson      </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
 <tr><td> NE</td><td>Damien Harris          </td></tr>
-<tr><td>PIT</td><td>Matthew Wright         </td></tr>
 </table>
 </td>
 </tr>
