--- a/roster.html
+++ b/roster.html
@@ -122,6 +122,7 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Grant (5)</b></font></td></tr>
 <tr><td>LAR</td><td>Jared Goff             </td></tr>
+<tr><td>CIN</td><td>Andy Dalton            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>DAL</td><td>Ezekiel Elliott        </td></tr>
 <tr><td>LAC</td><td>Melvin Gordon          </td></tr>
@@ -142,7 +143,6 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td>CHI</td><td>David Montgomery       </td></tr>
 <tr><td> SF</td><td>Deebo Samuel           </td></tr>
-<tr><td>IND</td><td>Parris Campbell        </td></tr>
 <tr><td>JAX</td><td>Gardner Minshew        </td></tr>
 </table>
 </td>
@@ -208,7 +208,6 @@
 <table border=0 cellspacing=0 width=204>
 <tr><td bgcolor=#B3B3B3 colspan=2><font color='purple'><b>Sam (8)</b></font></td></tr>
 <tr><td> TB</td><td>Jameis Winston         </td></tr>
-<tr><td>NYJ</td><td>Sam Darnold            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYJ</td><td>Le'Veon Bell           </td></tr>
 <tr><td>ATL</td><td>Devonta Freeman        </td></tr>
@@ -230,6 +229,7 @@
 <tr><td>CLE</td><td>Austin Seibert         </td></tr>
 <tr><td> KC</td><td>Darwin Thompson        </td></tr>
 <tr><td>NYG</td><td>Daniel Jones           </td></tr>
+<tr><td>PIT</td><td>Diontae Johnson        </td></tr>
 </table>
 </td>
 <td valign=top>
