--- a/thousand.html
+++ b/thousand.html
@@ -63,6 +63,12 @@
     <td>1305</td>
     <td>Steven</td>
     <td>815</td></tr>
+<tr><td>2019</td>
+    <td>Week 3</td>
+    <td>Sam Edwards</td>
+    <td>1305</td>
+    <td>Randy</td>
+    <td>1100</td></tr>
 <tr><td>2000</td>
     <td>Week 12</td>
     <td>States Edwards</td>
@@ -429,6 +435,12 @@
     <td>1100</td>
     <td>Mike</td>
     <td>410</td></tr>
+<tr><td>2019</td>
+    <td>Week 3</td>
+    <td>Randy Edwards</td>
+    <td>1100</td>
+    <td>Sam</td>
+    <td>1305</td></tr>
 <tr><td>2003</td>
     <td>Week 12</td>
     <td>Matthew Edwards</td>
@@ -555,6 +567,12 @@
     <td>1065</td>
     <td>Randy</td>
     <td>395</td></tr>
+<tr><td>2019</td>
+    <td>Week 3</td>
+    <td>John Heinzelmann</td>
+    <td>1065</td>
+    <td>Grant</td>
+    <td>705</td></tr>
 <tr><td>2002</td>
     <td>Week 7</td>
     <td>Roger Bakos</td>
