--- a/pickups.html
+++ b/pickups.html
@@ -146,8 +146,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Andy Dalton/Parris Campbell</td>
+<td width=50>9/21</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -203,8 +203,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Diontae Johnson/Sam Darnold</td>
+<td width=50>9/19</td>
 </tr></table></td>
 </tr>
 <tr>
