--- a/pickups.html
+++ b/pickups.html
@@ -87,8 +87,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Preston Williams/Tarik Cohen</td>
+<td width=50>9/25</td>
 </tr></table></td>
 </tr>
 <tr>
@@ -198,8 +198,8 @@
 <tr>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Wayne Gallman/Duke Johnson</td>
+<td width=50>9/24</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
@@ -210,8 +210,8 @@
 <tr>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Vernon Davis/Jesse James</td>
+<td width=50>9/24</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
@@ -333,6 +333,8 @@ Team 10 - Tommy Sweeney/Jerick McKinnon (9/14)<br>
 Team 5  - Carlos Hyde/CJ Anderson (9/17)<br>
 Team 6  - Demarcus Robinson/Matthew Wright (9/17)<br>
 Team 1  - Raheem Mostert/Derrius Guice (9/17)<br>
-Team 5  - Darren Waller/Ben Roethlisberger (9/17)
+Team 5  - Darren Waller/Ben Roethlisberger (9/17)<br>
+Team 5  - Darrel Williams/Antonio Brown (9/24)<br>
+Team 5  - Will Dissly/David Njoku (9/25)
 </td></tr>
 </table>
