--- a/roster.html
+++ b/roster.html
@@ -102,7 +102,6 @@
 <tr><td>MIN</td><td>Dalvin Cook            </td></tr>
 <tr><td>DEN</td><td>Phillip Lindsay        </td></tr>
 <tr><td>MIA</td><td>Kenyan Drake           </td></tr>
-<tr><td>CHI</td><td>Tarik Cohen            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAC</td><td>Keenan Allen           </td></tr>
 <tr><td>LAR</td><td>Robert Woods           </td></tr>
@@ -116,6 +115,7 @@
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Matt Gay               </td></tr>
 <tr><td>BAL</td><td>Justice Hill           </td></tr>
+<tr><td>MIA</td><td>Preston Williams       </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -130,14 +130,14 @@
 <tr><td> NO</td><td>Latavius Murray        </td></tr>
 <tr><td>WAS</td><td>Adrian Peterson        </td></tr>
 <tr><td> KC</td><td>Carlos Hyde            </td></tr>
+<tr><td> KC</td><td>Darrel Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
-<tr><td> NE</td><td>Antonio Brown          </td></tr>
 <tr><td> NE</td><td>Julian Edelman         </td></tr>
 <tr><td>CLE</td><td>Jarvis Landry          </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td>CLE</td><td>David Njoku            </td></tr>
 <tr><td>OAK</td><td>Darren Waller          </td></tr>
+<tr><td>SEA</td><td>Will Dissly            </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>HOU</td><td>Ka'imi Fairbairn       </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -183,9 +183,9 @@
 <tr><td>LAC</td><td>Philip Rivers          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>James Conner           </td></tr>
-<tr><td>HOU</td><td>Duke Johnson           </td></tr>
 <tr><td> NE</td><td>James White            </td></tr>
 <tr><td>PIT</td><td>Jaylen Samuels         </td></tr>
+<tr><td>NYG</td><td>Wayne Gallman          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>Mike Evans             </td></tr>
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
@@ -194,7 +194,7 @@
 <tr><td>JAX</td><td>Dede Westbrook         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
-<tr><td>DET</td><td>Jesse James            </td></tr>
+<tr><td>WAS</td><td>Vernon Davis           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Aldrick Rosas          </td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
