--- a/roster.html
+++ b/roster.html
@@ -161,13 +161,13 @@
 <tr><td> KC</td><td>Tyreek Hill            </td></tr>
 <tr><td>CHI</td><td>Allen Robinson         </td></tr>
 <tr><td>CAR</td><td>Curtis Samuel          </td></tr>
-<tr><td>PHI</td><td>DeSean Jackson         </td></tr>
 <tr><td> KC</td><td>Demarcus Robinson      </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> TB</td><td>OJ Howard              </td></tr>
 <tr><td>TEN</td><td>Delanie Walker         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>Robbie Gould           </td></tr>
+<tr><td>ARI</td><td>Zane Gonzalez          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>LAR</td><td>Darrell Henderson      </td></tr>
 <tr><td>SEA</td><td>DK Metcalf             </td></tr>
