--- a/pickups.html
+++ b/pickups.html
@@ -139,8 +139,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>1)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Zane Gonzalez/DeSean Jackson</td>
+<td width=50>9/26</td>
 </tr></table></td>
 </tr>
 <tr>
