--- a/week4.html
+++ b/week4.html
@@ -37,10 +37,10 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (2)</b></font></td></tr>
 <tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Michel</td>        <td></td><td align=right>0</td></tr>
 <tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Hilton</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Golladay</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Graham</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
@@ -56,7 +56,7 @@
 <tr><td>Hopkins</td>       <td></td><td align=right>0</td></tr>
 <tr><td>DRobinson</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Walker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Gould</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Gonzalez</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
@@ -110,11 +110,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (7)</b></font></td></tr>
 <tr><td>Wilson</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Pollard</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Gallman</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Thielen</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Kittle</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Shepherd</td>      <td></td><td align=right>0</td></tr>
+<tr><td>VDavis</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Rosas</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Jacobs</td>        <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -127,10 +127,10 @@
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Grant (5)</b></font></td></tr>
 <tr><td>Goff</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Elliott</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Montgomery</td>    <td></td><td align=right>0</td></tr>
-<tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Hyde</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Smith-Schuster</td><td></td><td align=right>0</td></tr>
-<tr><td>Waller</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Edelman</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Dissly</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Fairbairn</td>     <td></td><td align=right>0</td></tr>
 <tr><td>Minshew</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
