--- a/pickups.html
+++ b/pickups.html
@@ -222,8 +222,8 @@
 <tr>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Devlin Hodges/Vernon Davis</td>
+<td width=50>10/8</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
@@ -335,6 +335,7 @@ Team 6  - Demarcus Robinson/Matthew Wright (9/17)<br>
 Team 1  - Raheem Mostert/Derrius Guice (9/17)<br>
 Team 5  - Darren Waller/Ben Roethlisberger (9/17)<br>
 Team 5  - Darrel Williams/Antonio Brown (9/24)<br>
-Team 5  - Will Dissly/David Njoku (9/25)
+Team 5  - Will Dissly/David Njoku (9/25)<br>
+Team 8  - Josh Lambo/Stephen Gostkowski (10/8)
 </td></tr>
 </table>
