--- a/roster.html
+++ b/roster.html
@@ -194,7 +194,6 @@
 <tr><td>JAX</td><td>Dede Westbrook         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
-<tr><td>WAS</td><td>Vernon Davis           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Aldrick Rosas          </td></tr>
 <tr><td>PHI</td><td>Jake Elliott           </td></tr>
@@ -202,6 +201,7 @@
 <tr><td>OAK</td><td>Josh Jacobs            </td></tr>
 <tr><td>DAL</td><td>Tony Pollard           </td></tr>
 <tr><td>JAX</td><td>Ryquell Armstead       </td></tr>
+<tr><td>PIT</td><td>Devlin Hodges          </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -225,7 +225,7 @@
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
 <tr><td>PIT</td><td>Vance McDonald         </td></tr>
 <tr><td height=9></td><td></td></tr>
-<tr><td> NE</td><td>Stephen Gostkowski     </td></tr>
+<tr><td>JAX</td><td>Josh Lambo             </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CLE</td><td>Austin Seibert         </td></tr>
 <tr><td>NYG</td><td>Daniel Jones           </td></tr>
