--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 <a href="week3.html"><b>3</b></a>
 <a href="week4.html"><b>4</b></a>
 <a href="week5.html"><b>5</b></a>
-<a href="week6.html"><b>6P</b></a><br>
+<a href="week6.html"><b>6</b></a>
+<a href="week7.html"><b>7P</b></a><br>
 <a href="roster.html"><b>Roster</b></a><br>
 <a href="pickups.html"><b>Pickups & Trades</b></a><br>
 <a href="leader.html"><b>Current Leaderboard</b></a><br>
@@ -63,45 +64,45 @@
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>High</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Low</b></font></td>
     <td bgcolor=#B3B3B3><font size=3.5 color='purple'><b>Weeks Won</b></font></td></tr>
-<tr><td><font size=2>States(3)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3700</font></td>
-    <td><font size=2>2555</font></td>
-    <td><font size=2>1105</font></td>
-    <td><font size=2>335</font></td>
-    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Rich(9)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3485</font></td>
-    <td><font size=2>3935</font></td>
+    <td><font size=2>4165</font></td>
+    <td><font size=2>4595</font></td>
     <td><font size=2>900</font></td>
     <td><font size=2>410</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>John(7)</font></td>
-    <td><font size=2>2</font></td>
+<tr><td><font size=2>States(3)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3575</font></td>
-    <td><font size=2>4030</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4510</font></td>
+    <td><font size=2>3425</font></td>
+    <td><font size=2>1105</font></td>
+    <td><font size=2>335</font></td>
+    <td><font size=2>2</font></td></tr>
+<tr><td><font size=2>John(7)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4445</font></td>
+    <td><font size=2>4840</font></td>
     <td><font size=2>1065</font></td>
     <td><font size=2>420</font></td>
-    <td><font size=2>0</font></td></tr>
+    <td><font size=2>1</font></td></tr>
 <tr><td><font size=2>Roger(1)</font></td>
-    <td><font size=2>2</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>3295</font></td>
-    <td><font size=2>3595</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3765</font></td>
+    <td><font size=2>3805</font></td>
     <td><font size=2>940</font></td>
     <td><font size=2>270</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Grant(5)</font></td>
     <td><font size=2>1</font></td>
-    <td><font size=2>4</font></td>
-    <td><font size=2>2925</font></td>
-    <td><font size=2>3585</font></td>
+    <td><font size=2>5</font></td>
+    <td><font size=2>3135</font></td>
+    <td><font size=2>4055</font></td>
     <td><font size=2>840</font></td>
-    <td><font size=2>295</font></td>
+    <td><font size=2>210</font></td>
     <td><font size=2>0</font></td></tr>
 <tr><td><font size=2></font></td>
     <td><font size=2></font></td>
@@ -111,43 +112,43 @@
     <td><font size=2></font></td>
     <td><font size=2></font></td>
     <td><font size=2></font></td></tr>
-<tr><td><font size=2>Randy(4)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>4565</font></td>
-    <td><font size=2>3910</font></td>
-    <td><font size=2>1100</font></td>
-    <td><font size=2>745</font></td>
-    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Matthew(2)</font></td>
-    <td><font size=2>3</font></td>
+    <td><font size=2>4</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3640</font></td>
-    <td><font size=2>3285</font></td>
+    <td><font size=2>4100</font></td>
+    <td><font size=2>3685</font></td>
     <td><font size=2>855</font></td>
     <td><font size=2>450</font></td>
     <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Steven(6)</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>2</font></td>
+    <td><font size=2>2685</font></td>
+    <td><font size=2>3070</font></td>
+    <td><font size=2>620</font></td>
+    <td><font size=2>340</font></td>
+    <td><font size=2>0</font></td></tr>
+<tr><td><font size=2>Randy(4)</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>4965</font></td>
+    <td><font size=2>4370</font></td>
+    <td><font size=2>1100</font></td>
+    <td><font size=2>400</font></td>
+    <td><font size=2>2</font></td></tr>
 <tr><td><font size=2>Mike(10)</font></td>
     <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>3455</font></td>
-    <td><font size=2>3530</font></td>
+    <td><font size=2>3</font></td>
+    <td><font size=2>3970</font></td>
+    <td><font size=2>4150</font></td>
     <td><font size=2>990</font></td>
     <td><font size=2>280</font></td>
     <td><font size=2>0</font></td></tr>
-<tr><td><font size=2>Steven(6)</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>2</font></td>
-    <td><font size=2>2065</font></td>
-    <td><font size=2>2555</font></td>
-    <td><font size=2>515</font></td>
-    <td><font size=2>340</font></td>
-    <td><font size=2>0</font></td></tr>
 <tr><td><font size=2>Sam(8)</font></td>
     <td><font size=2>2</font></td>
-    <td><font size=2>3</font></td>
-    <td><font size=2>3340</font></td>
-    <td><font size=2>3065</font></td>
+    <td><font size=2>4</font></td>
+    <td><font size=2>4000</font></td>
+    <td><font size=2>3745</font></td>
     <td><font size=2>1305</font></td>
     <td><font size=2>405</font></td>
     <td><font size=2>1</font></td></tr>
