--- a/roster.html
+++ b/roster.html
@@ -191,7 +191,6 @@
 <tr><td>MIN</td><td>Adam Thielen           </td></tr>
 <tr><td>PHI</td><td>Alshon Jeffery         </td></tr>
 <tr><td>NYG</td><td>Sterling Shepard       </td></tr>
-<tr><td>JAX</td><td>Dede Westbrook         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td> SF</td><td>George Kittle          </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -202,6 +201,7 @@
 <tr><td>DAL</td><td>Tony Pollard           </td></tr>
 <tr><td>JAX</td><td>Ryquell Armstead       </td></tr>
 <tr><td>PIT</td><td>Devlin Hodges          </td></tr>
+<tr><td>NYG</td><td>Darius Slayton         </td></tr>
 </table>
 </td>
 <td valign=top>
@@ -223,7 +223,7 @@
 <tr><td>ARI</td><td>Christian Kirk         </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>NYG</td><td>Evan Engram            </td></tr>
-<tr><td>PIT</td><td>Vance McDonald         </td></tr>
+<tr><td>LAC</td><td>Hunter Henry           </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>JAX</td><td>Josh Lambo             </td></tr>
 <tr><td height=9></td><td></td></tr>
