--- a/pickups.html
+++ b/pickups.html
@@ -227,15 +227,15 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>3)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Hunter Henry/Vance McDonald</td>
+<td width=50>10/15</td>
 </tr></table></td>
 </tr>
 <tr>
 <td><table><tr>
 <td width=15>4)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Darius Slayton/Dede Westbrook</td>
+<td width=50>10/16</td>
 </tr></table></td>
 <td><table><tr>
 <td width=15>4)</td>
