--- a/roster.html
+++ b/roster.html
@@ -128,7 +128,7 @@
 <tr><td>LAC</td><td>Melvin Gordon          </td></tr>
 <tr><td> SF</td><td>Tevin Coleman          </td></tr>
 <tr><td> NO</td><td>Latavius Murray        </td></tr>
-<tr><td> KC</td><td>Carlos Hyde            </td></tr>
+<tr><td>HOU</td><td>Carlos Hyde            </td></tr>
 <tr><td> KC</td><td>Darrel Williams        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>PIT</td><td>JuJu Smith-Schuster    </td></tr>
@@ -271,13 +271,14 @@
 <tr><td>ARI</td><td>David Johnson          </td></tr>
 <tr><td>TEN</td><td>Derrick Henry          </td></tr>
 <tr><td>CLE</td><td>Kareem Hunt            </td></tr>
-<tr><td>BUF</td><td>LeSean McCoy           </td></tr>
+<tr><td> KC</td><td>LeSean McCoy           </td></tr>
 <tr><td> TB</td><td>Peyton Barber          </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>ATL</td><td>Julio Jones            </td></tr>
 <tr><td>DAL</td><td>Amari Cooper           </td></tr>
 <tr><td> KC</td><td>Sammy Watkins          </td></tr>
 <tr><td>CIN</td><td>AJ Green               </td></tr>
+<tr><td> NE</td><td>Phillip Dorsett        </td></tr>
 <tr><td height=9></td><td></td></tr>
 <tr><td>CAR</td><td>Greg Olsen             </td></tr>
 <tr><td height=9></td><td></td></tr>
@@ -286,7 +287,6 @@
 <tr><td>PHI</td><td>Miles Sanders          </td></tr>
 <tr><td>CIN</td><td>Damion Willis          </td></tr>
 <tr><td>DEN</td><td>Drew Lock              </td></tr>
-<tr><td>BUF</td><td>Tommy Sweeney          </td></tr>
 <tr><td>BUF</td><td>Dawson Knox            </td></tr>
 </table>
 </td>
