--- a/pickups.html
+++ b/pickups.html
@@ -279,8 +279,8 @@
 </tr></table></td>
 <td><table><tr>
 <td width=15>2)</td>
-<td width=370></td>
-<td width=50></td>
+<td width=370>Phillip Dorsett/Tommy Sweeney</td>
+<td width=50>10/19</td>
 </tr></table></td>
 </tr>
 <tr>
