--- a/week7.html
+++ b/week7.html
@@ -36,14 +36,14 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (2)</b></font></td></tr>
-<tr><td>Brady</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Michel</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MBrown</td>        <td></td><td align=right>0</td></tr>
-<tr><td>MThomas</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Wentz</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Barkley</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Gurley</td>        <td></td><td align=right>0</td></tr>
+<tr><td>Hilton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Sutton</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Graham</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Butker</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Slye</td>          <td></td><td align=right>0</td></tr>
+<tr><td>Haskins</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
 </table>
 </td>
@@ -80,12 +80,12 @@
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Rich (9)</b></font></td></tr>
-<tr><td>Prescott</td>      <td></td><td align=right>0</td></tr>
+<tr><td>Ryan</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Mixon</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Chubb</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Howard</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Cooks</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Godwin</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Cook</td>          <td></td><td align=right>0</td></tr>
+<tr><td>MWilliams</td>     <td></td><td align=right>0</td></tr>
+<tr><td>Rudolph</td>       <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>0</td></tr>
 <tr><td>McLaurin</td>      <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
@@ -110,11 +110,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Mike (10)</b></font></td></tr>
 <tr><td>Watson</td>        <td></td><td align=right>0</td></tr>
+<tr><td>DJohnson</td>      <td></td><td align=right>0</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
-<tr><td>McCoy</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Cooper</td>        <td></td><td align=right>0</td></tr>
 <tr><td>JJones</td>        <td></td><td align=right>0</td></tr>
-<tr><td>Olsen</td>         <td></td><td align=right>0</td></tr>
+<tr><td>Dorsett</td>       <td></td><td align=right>0</td></tr>
+<tr><td>Knox</td>          <td></td><td align=right>0</td></tr>
 <tr><td>Crosby</td>        <td></td><td align=right>0</td></tr>
 <tr><td>Sanders</td>       <td></td><td align=right>0</td></tr>
 <tr><td></td>              <td></td><td align=right>0</td></tr>
